<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_shortcut_restart">Restart</string>
    <string name="email_or_phone_number">Email atau Nomor Ponsel</string>
    <string name="password">Kata Sandi</string>
    <string name="remember_me">Ingat Saya</string>
    <string name="forgot_password">Lupa Kata Sandi?</string>
    <string name="login">Masuk</string>
    <string name="text_login">Login</string>
    <string name="requeired_email_or_phone_number">Email atau Nomor Ponsel harus diisi</string>
    <string name="required_password">Password harus diisi</string>
    <string name="message_error_login">Email atau Nomor Ponsel atau Password tidak cocok</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="message_error_field">%s harus diisi!</string>
    <string name="message_success_register">Registrasi berhasil, silahkan login!</string>
    <string name="tidak_punya_akun">Tidak punya akun?</string>
    <string name="buat_akun">Buat akun</string>
    <string name="message_error_password">Password minimal 6 karakter!</string>

    <string-array name="form_hints">
        <item>Nama Lengkap</item>
        <item>Alamat</item>
        <item>Username</item>
        <item>Password</item>
        <item>Email</item>
        <item>No Hp</item>
    </string-array>
</resources>